welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:4: error: illegal start of simple expression
var Biscuits:Int = 0
^