welcome.lessons.welcome.loopdowhile.Poucet.scala.code
while(!estSurOrange)

var Biscuits:Int = 0
var nbPas:Int = 0

{
	avance()
	nbPas = nbPas + 1
	if(nbPas = 5)
	{
		if(Biscuits >= 3)
		{
			droite();
		}
		else
		{
			gauche()
		}
	}
}
